Bug 293277 - NFS Dynamic collection plugin fails to detect NFS mount
Summary: NFS Dynamic collection plugin fails to detect NFS mount
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/Local (other bugs)
Version First Reported In: 2.5.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
: 232976 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-04 10:15 UTC by Leonidas Tsampros
Modified: 2014-01-31 08:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leonidas Tsampros 2012-02-04 10:15:20 UTC
Version:           2.5.0 (using KDE 4.6.5) 
OS:                Linux

NFS Dynamic collection plugin fails to detect NFS mount.

The mount is configured in fstab as:
192.168.1.68:/multimedia               /mnt    nfs     user,rw       0         0

I mounted the share through Dolphin successfully but Amarok fails to detect this NFS mount point. Other plugins seem to work. other usb mass storage devices are detected successfully.

Reproducible: Always

Steps to Reproduce:
Happens always even with the NFS share mounted/unmounted. I have tried restarting Amarok.

Actual Results:  
The NFS mount point is not listed under the Local Sources.

Expected Results:  
The NFS mount should have appeared under the local sources if mounted since it exists in fstab.
Comment 1 Matěj Laitl 2012-02-05 17:33:06 UTC
Git commit 3788b0ee6d6407c1b459b16181d32db247aedcaf by Matěj Laitl.
Committed on 05/02/2012 at 12:10.
Pushed by laitl into branch 'master'.

Change GUI strings in Configuration dialog to reduce user confusion

This is a result of a dialogue with an Amarok user (Leonidas Tsampros)
on #amarok who (logically) thought that if he enables "NFS Device" in
"Devices" section of Amarok plugins, NFS will pop-up as another
collection.

This is not how SMB, NFS, MassStorage "Devices" work currently, they
are meant to enable users to have a part of their collection on
respective devices.

I believe that the old plugin names and descriptions are confusing to
the extent that their translations should be dropped; it should be a
plenty of time till Amarok 2.6 so translators should have opportunity
to pickup these. (or, do .desktop translations get erased automatically
when original string changes?)

CHANGES:
 * "Devices" in Amarok configuration -> Plugins is with other related strings
   renamed to "Local Collection Backends" to reduce user confusion.
FIXED-IN: 2.6
REVIEW: 103871

M  +2    -0    ChangeLog
M  +1    -1    src/configdialog/ConfigDialog.cpp
M  +1    -1    src/configdialog/dialogs/PluginsConfig.cpp
M  +3    -112  src/core-impl/collections/db/sql/device/massstorage/amarok_device_massstorage.desktop
M  +2    -108  src/core-impl/collections/db/sql/device/nfs/amarok_device_nfs.desktop
M  +2    -108  src/core-impl/collections/db/sql/device/smb/amarok_device_smb.desktop

http://commits.kde.org/amarok/3788b0ee6d6407c1b459b16181d32db247aedcaf
Comment 2 Matěj Laitl 2012-02-05 21:15:45 UTC
Git commit 3e0935ccdb5a13ca415655d9c9e45166db5ccfbf by Matěj Laitl.
Committed on 05/02/2012 at 22:01.
Pushed by laitl into branch 'master'.

Fixup previous commit, Local Files backend supports pluggable devices too

M  +2    -2    src/core-impl/collections/db/sql/device/massstorage/amarok_device_massstorage.desktop

http://commits.kde.org/amarok/3e0935ccdb5a13ca415655d9c9e45166db5ccfbf
Comment 3 Matěj Laitl 2012-02-05 21:19:15 UTC
*** Bug 232976 has been marked as a duplicate of this bug. ***
Comment 4 Silver Salonen 2014-01-30 15:25:18 UTC
I too use NFS share for music and Amarok 2.8.0 and I don't find my NFS folders anywhere in there. Is there some plugin needed for it?
Comment 5 Myriam Schweingruber 2014-01-30 15:43:40 UTC
(In reply to comment #4)
> I too use NFS share for music and Amarok 2.8.0 and I don't find my NFS
> folders anywhere in there. Is there some plugin needed for it?

Please read the commit message in Comment #1: it will not show up as a separate collection, you can enable the NFS mounts to be added to the collection, provided those are mounted.

FWIW: I have a samba share that I added to my collection, NFS should work exactly the same way.
Comment 6 Silver Salonen 2014-01-30 15:51:31 UTC
I can't see it as a separate collection.
Comment 7 Myriam Schweingruber 2014-01-31 08:49:48 UTC
(In reply to comment #6)
> I can't see it as a separate collection.

Of course not, that never was shown as a separate collection.